# PySilon-malware

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Fake_Notifications.py  LICENSE  PySilon-linux.sh  PySilon.bat  PySilon.sh  README.md  builder.bat  builder.py  compiler.py  compiler_obsolete.py  configuration.ini  configuration.json  crypto_clipper.json  main.py  main_obsolete.py  merger.py  pysilon-launcher.bat  requirements-dev.txt  requirements.txt  screenshot.py  source.py  splitter.py  start_builder.bat  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  if-you-are-unsure-pick-bug-report.md
gui_assets/: builder.py  template_main.rs
resources/: DisableWD.bat  EnableWD.bat  anti_vm.py  builder.py  compiler.py  crypto_clipper.json  custom_imports.ini  discord_token_grabber.py  embed_generator.py  get_cookies.py  misc.py  mrd.py  passwords_grabber.py  protections.py  requirements.txt  resobuilding_executable_obsolete.md  source.py  temp  uac_bypass.py
resources/assets/: builder_configuration.json  compiler_configuration.json
resources/cfg/: builder_configuration.json  compiler_configuration.json  configuration.json  crypto_clipper.json  default_configuration.json
resources/experimental (not important)/: test.py
resources/features/: WD-Exclusions.py  (+25 more)
src/: bsod.rs  discord_bot.rs  discord_token_grabber.rs  download.rs  key.pysilon  keylogger.rs  main.rs  password_grabber.rs  processes.rs  registry.rs  screenshot.rs  tree.rs  upload.rs  webcam.rs  wifi.rs
tools/: Download Link Generator.py  Download-Links.py  compiler.py  merger.py  splitter.py  tree_generator.py
(+76 files in other folders)
